<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="example.android.musicplayer.MainActivity">

    <ImageView
        style="@style/mainImage"
        android:src="@drawable/picture" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="5"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/getMusic"
            style="@style/images"
            android:contentDescription="@string/getMusic"
            android:src="@drawable/newmusic" />

        <ImageView
            android:id="@+id/skipBack"
            style="@style/images"
            android:contentDescription="@string/skipb"
            android:src="@drawable/skipbackword" />

        <ImageView
            android:id="@+id/playPause"
            style="@style/images"
            android:contentDescription="@string/playPause"
            android:src="@drawable/play" />

        <ImageView
            android:id="@+id/skipForward"
            style="@style/images"
            android:contentDescription="@string/skipf"
            android:src="@drawable/skipforward" />

        <ImageView
            android:id="@+id/album"
            style="@style/images"
            android:contentDescription="@string/album"
            android:src="@drawable/album" />
    </LinearLayout>

</LinearLayout>
